# inzai-election-board

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bigquery_setup.md  cache_bigquery_data.py  config.example.json  optimization_log.txt  poster_board_locations.csv  pyproject.toml  route_optimizer.py  test_single_district.py  test_status_filtering.py
.github/: CODEOWNERS
data/: polling_places.csv  polling_places.example.csv  poster_board_locations.example.csv
docs/: config.js  googleMaps.js  index.html  map.js  script.js  styles.css  utils.js  voting_routes.geojson
docs/css/: styles.css
docs/data/: bigquery_cache.csv  poster_board_points.geojson  poster_board_routes.geojson
docs/js/: config.js  districts.js  googleMaps.js  main.js  map.js  routes.js  ui.js  utils.js
src/board_route_optimizer/: __init__.py  cli.py  config.py
src/board_route_optimizer/core/: __init__.py  optimizer.py  tsp_solver.py
src/board_route_optimizer/data/: __init__.py  bigquery_loader.py  loader.py
src/board_route_optimizer/export/: __init__.py  geojson_exporter.py
src/board_route_optimizer/utils/: __init__.py  distance.py
src/election_optimizer/: cli.py  config.py
src/election_optimizer/core/: optimizer.py
src/election_optimizer/data/: __init__.py  loader.py
src/election_optimizer/utils/: distance.py
src/inzai_election_board/: __init__.py  route_optimizer.py
tests/: test_bigquery.py  test_cache.py  test_route_optimizer.py  test_route_segments.py
