[project]
name = "election-board-optimizer"
version = "1.0.0"
description = "Election Board Route Optimizer - TSP-based route optimization for election poster board maintenance"
authors = [
    {name = "Election Board Optimizer Team", email = "contact@election-optimizer.org"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Government",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Office/Business :: Scheduling",
]
keywords = ["election", "route-optimization", "tsp", "geojson", "government"]
dependencies = [
    "geopy>=2.4.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polyline>=2.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/ota2000/inzai-election-board"
Documentation = "https://github.com/ota2000/inzai-election-board#readme"
Repository = "https://github.com/ota2000/inzai-election-board.git"
Issues = "https://github.com/ota2000/inzai-election-board/issues"

[project.scripts]
election-optimizer = "election_optimizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/election_optimizer"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
